static/css/style.css
body {
    font-family: Arial, sans-serif;
    font-size: 18px;
    margin: 20px 100px;
    padding: 0;
    background-color: #000;
}
header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    column-gap: 30px;
    margin-bottom: 20px; 
}
header nav a {
    margin: 0 1em;
    text-decoration: none;
    font-size: 1.0rem;
}
h1.brand-text {
    font-size: 1.8rem;
    color: #CCCCFF;
    line-height: 0;
}
h2.brand-text {
    font-size: 1.4rem;
    color: #fff;
    font-weight: 300;
}
div.btn-group {
    margin-left: auto;
    display: flex;
    gap: 16px;
}
div.btn-group a{
    text-decoration: none;
}
div.logo-container {
    width: 100px;
    height: 100px;
    overflow: hidden;
    border-radius: 50%;
}
img.logo {
    width: 100%;
    height: auto;
}
svg {
    color: #fff;
}
svg:hover {
    color: #FFFFCC;
}

main {
    display: flex;
    flex-direction: row;
    gap: 100px;
    padding-bottom: 0;
}
main div.content-container {
    width: 100%;
}
section {
    border-radius: 10px;
    background-color: #FFF;
    height: auto;
    margin-bottom: 64px;
    padding: 30px 50px;
}
section.about {
    height: 400px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
section.about p {
    line-height: 1.5;
    max-width: 75%;
}
img.headshot {
    height: 100%;
    max-width: 100%;
    border-radius: 8%;
}
section.skills {
    height: auto;
    margin-bottom: 64px;
    padding: 10 20px;
    background-color: transparent;
}
section.skills h2 {
    text-align: center;
    color: #fff;
}
section.contact p svg {
    padding-right: 8px;
}
div.skill-container {
    display: flex;
    justify-content: space-evenly;
    
    /* flex-wrap: wrap; */
}
div.skill-container svg {
    padding: 10px;
    /* flex-basis: 25%; */
}
div.project {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}
div.project-card {
    flex: 1 1 calc(25% - 20px); /* Adjusts width based on available space */
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 8px;
    padding: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    text-align: center;
    transition: transform 0.3s ease;
    margin: 20px;
}
/* Apply different background colors to each nth-child */
.project:nth-child(2) .project-card {
    background-color: #FFCCCC; /* Light Red */
}

.project:nth-child(3) .project-card {
    background-color: #CCFFCC; /* Light Green */
}

.project:nth-child(4) .project-card {
    background-color: #CCCCFF; /* Light Blue */
}

.project:nth-child(5) .project-card {
    background-color: #FFFFCC; /* Light Yellow */
}

div.project-desc {
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    padding: 1rem;
}
div.project-desc h3 {
    margin-bottom: -10px;
}

a.btn, .course td a {
    border: 1px solid #eeeeee;
    color: #eeeeee;
    text-decoration: none;
    padding: 7px 10px;
    border-radius: 5px;
    font-size: .9rem;
    background-color: #131313;
    width: 25%;
    align-self: center;
}
a.btn:hover, button:hover, .course td a:hover {
    border: 1px solid #131313c2;
}
.course {
    padding: 5px;
    overflow-x: auto;
}
.course td a {
    text-decoration: none;
    color: #fff;
}

table {
    width: 100%;
    border-collapse: collapse;
}
th, td {
    padding: 8px;
    border: 1px solid #ddd;
    text-align: left;
}
th {
    background-color: #f4f4f4;
}

footer {
    text-align: center;
    color: #eeeeee;
}

/* Tablet devices */
@media only screen and (min-width: 600px) and (max-width: 1024px) {
    body {
        font-size: 18px;
        margin: 20px 50px;
    }
    main {
        padding: 2em;
        display: flex;
        flex-direction: column;
        gap: 50px;
        padding-bottom: 0;
    }
    header {
        flex-wrap: wrap;
        justify-content: center;
        gap: 20px; /* Added gap to space out items */
    }
    div.btn-group {
        margin-left: 0;
    }
    h1.brand-text {
        font-size: 1.6rem;
        text-align: center;
    }
    h2.brand-text {
        text-align: center;
    }
}

/* Mobile devices */
@media only screen and (max-width: 599px) {
    body {
        font-size: 16px;
        margin: 10px 20px;
    }
    header {
        flex-direction: column;
        align-items: center;
        gap: 10px;
    }
    h1.brand-text {
        font-size: 1.4rem;
        text-align: center;
    }
    h2.brand-text {
        text-align: center;
    }
    main {
        padding: 2em;
        display: flex;
        flex-direction: column;
        gap: 30px;
    }
    div.logo-container {
        width: 70px;
        height: 70px;
    }
    div.btn-group {
        margin-left: 0;
        gap: 10px;
    }
    section {
        padding: 20px;
    }
    section.about {
        height: auto;
        flex-direction: column-reverse;
    }
    section.about p {
        max-width: 100%;
    }
    img.headshot {
        display: none;
    }
    div.project-card {
        flex: 1 1 calc(100% - 20px); /* Stack cards on top of each other */
        margin: 10px 0;
    }
}

